# router/router.go
@@ -73,10 +73,10 @@ func register(router *gin.Engine) {
 		jwt.POST("/upload", controller.Upload)
 		jwt.PUT("/admin/updatePersonal", controller.UpdatePersonal)
 		jwt.PUT("/admin/updatePersonalPassword", controller.UpdatePersonalPassword)
-		// jwt.GET("/sysLoginInfo/list", controller.GetSysLoginInfoList)
-		// jwt.DELETE("/sysLoginInfo/batch/delete", controller.BatchDeleteSysLoginInfo)
-		// jwt.DELETE("/sysLoginInfo/delete", controller.DeleteSysLoginInfoById)
-		// jwt.DELETE("/sysLoginInfo/clean", controller.CleanSysLoginInfo)
+		jwt.GET("/sysLoginInfo/list", controller.GetSysLoginInfoList)
+		jwt.DELETE("/sysLoginInfo/batch/delete", controller.BatchDeleteSysLoginInfo)
+		jwt.DELETE("/sysLoginInfo/delete", controller.DeleteSysLoginInfoById)
+		jwt.DELETE("/sysLoginInfo/clean", controller.CleanSysLoginInfo)
 		// jwt.GET("/sysOperationLog/list", controller.GetSysOperationLogList)
 		// jwt.DELETE("/sysOperationLog/delete", controller.DeleteSysOperationLogById)
 		// jwt.DELETE("/sysOperationLog/batch/delete", controller.BatchDeleteSysOperationLog)
